@@ -5,6 +5,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.http.ResponseEntity;
 import ru.practicum.StatsClient;
 import ru.practicum.dto.ViewStatsDto;
+import ru.practicum.exception.ValidationException;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
@@ -13,6 +14,10 @@ import java.util.List;
 public class HitsEventViewUtil {
 
     public static Long getHitsEvent(Long eventId, LocalDateTime start, LocalDateTime end, Boolean unique, StatsClient statsClient) {
+
+        if (start.isAfter(end)) {
+            throw new ValidationException("Start date cannot be after end date");
+        }
 
         List<String> uris = new ArrayList<>();
         uris.add("/events/" + eventId);
@@ -26,15 +31,17 @@ public class HitsEventViewUtil {
         ObjectMapper mapper = new ObjectMapper();
 
         if (responseBody != null) {
-            output = mapper.convertValue(responseBody, new TypeReference<List<ViewStatsDto>>() {});
+            output = mapper.convertValue(responseBody, new TypeReference<List<ViewStatsDto>>() {
+            });
         }
 
         Long view = 0L;
 
         if (!output.isEmpty()) {
-            view = output.getFirst().getHits();
+            view = output.get(0).getHits();
         }
         return view;
+
     }
 }
 
